--- a/project.tex
+++ b/project.tex
@@ -943,7 +943,7 @@ with the sprint types and other artifacts and ceremonies of our approach.
 \begin{tablebox}[label=tab:phases]{Relationship between coverage of other methodologies and our approach.}
   \centering
   \rowcolors{2}{black!10!white}{}
-  \small % TODO: ugly workaround
+  \small % TODO: ugly workaround, maybe use p{} instead of l
   \begin{tabular}{lll}
     \toprule
     \textbf{CRISP-DM} & \textbf{ZM approach} & \textbf{Our approach} \\
